# ntex-starter-pack

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  mini.Dockerfile  readme.md  rustfmt.toml  tt.rest
.github/workflows/: rust.yml
migrations/: 01_init.sql  02_test_users.sql
src/: error.rs  main.rs
src/common/: macro.rs
src/infra/: database.rs  health.rs  mod.rs  openapi.rs
src/infra/model/: error.rs
src/models/: todo.rs
src/services/: openapi.rs  todo.rs
src/todo/: mod.rs  todo.rs
src/todo/model/: mod.rs
src/user/: mod.rs  user_controller.rs  user_service.rs
src/user/model/: mod.rs
