[package]
name = "my-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[dependencies]
ntex = { version = "2.7.0", features = ["tokio"] }
serde = { version = "1.0.210", features = ["derive"] }
utoipa = "5.1.1"
utoipa-swagger-ui = "8.0.1"
env_logger = "0.11.5"
derive_more = {version =  "1", features = ["error", "display"] }
