[package]
name = "my-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[dependencies]
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "postgres", "migrate", 'macros'] }
ntex = { version = "2.11.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = "5.3.1"
utoipa-swagger-ui = "9"
env_logger = "0.11.6"
derive_more = {version =  "1", features = ["error", "display"] }
log = "0.4.26"
